[package]
edition = "2024"
name = "chuck"
version = "0.1.0"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-12288"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.1", features = [
    "defmt",
    "esp32c3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "^1.0.0-beta", features = ["defmt", "esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
