[package]
default-run = "chuck"
edition = "2024"
name = "chuck"
version = "0.1.0"

[dependencies]
chuck_core = { path = "../chuck_core" }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-12288"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.1", features = [
    "defmt",
    "esp32c3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "^1.0.0-beta", features = ["defmt", "esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
static_cell = "2.1.0"
